--- a/Application/Application.csproj
+++ b/Application/Application.csproj
@@ -10,4 +10,8 @@
       <ProjectReference Include="..\Domain\Domain.csproj" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="DaoInterfaces\" />
+    </ItemGroup>
+
 </Project>
